Reduce duplication in KeySpacePathDataExportTest and remove exportAllData overrides